--- a/poster.tex
+++ b/poster.tex
@@ -9,9 +9,9 @@
 
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
-\usepackage[size=custom,width=120,height=72,scale=1.0]{beamerposter}
-\usetheme{gemini}
-\usecolortheme{gemini}
+\usepackage[size=a0,orientation=portrait,scale=1.0]{beamerposter}
+\usetheme{kth}
+\usecolortheme{kth}
 \usepackage{graphicx}
 \usepackage{booktabs}
 \usepackage{tikz}
@@ -59,6 +59,8 @@
 % use this to include logos on the left and/or right side of the header:
 % \logoright{\includegraphics[height=7cm]{logo1.pdf}}
 % \logoleft{\includegraphics[height=7cm]{logo2.pdf}}
+\logocenter{\includegraphics[height=10cm]{logos/RGB/png/KTH_logo_RGB_bla.png}}
+
 
 % ====================
 % Body
