--- a/beamercolorthemekth.sty
+++ b/beamercolorthemekth.sty
@@ -2,15 +2,21 @@
 % https://github.com/anishathalye/gemini
 
 % ====================
+% Dependencies
+% ====================
+
+\RequirePackage{kthcolors}
+
+% ====================
 % Definitions
 % ====================
 
 % Digital colors
-\definecolor{sand}{RGB}{235,229,224}
-\definecolor{kthblue}{RGB}{0,71,145}
-\definecolor{skyblue}{RGB}{98,152,210}
-\definecolor{navy}{RGB}{0,0,97}
-\definecolor{lightblue}{RGB}{222,240,255}
+%\definecolor{sand}{RGB}{235,229,224}
+%\definecolor{kthblue}{RGB}{0,71,145}
+%\definecolor{skyblue}{RGB}{98,152,210}
+%\definecolor{navy}{RGB}{0,0,97}
+%\definecolor{lightblue}{RGB}{222,240,255}
 
 % Coated colors
 %\definecolor{sand}{cmyk}{0.09,0.09,0.12,0}
@@ -40,15 +46,16 @@
 
 % Headline
 \setbeamercolor{headline}{fg=navy}
-\setbeamercolor{headline rule}{bg=navy}
+\setbeamercolor{headline author}{fg=skyblue}
+\setbeamercolor{headline institute}{fg=skyblue}
 
 % Block
-\setbeamercolor{block title}{fg=kthblue}
+\setbeamercolor{block title}{fg=navy}
 \setbeamercolor{block separator}{bg=black}
 \setbeamercolor{block body}{fg=black}
 
 % Alert Block
-\setbeamercolor{block alerted title}{fg=kthblue,bg=lightblue}
+\setbeamercolor{block alerted title}{fg=navy,bg=lightblue}
 \setbeamercolor{block alerted separator}{bg=black}
 \setbeamercolor{block alerted body}{fg=black,bg=lightblue}
 
