Add KTH line drawing

--- a/beamercolorthemekth.sty
+++ b/beamercolorthemekth.sty
@@ -46,8 +46,11 @@
 
 % Headline
 \setbeamercolor{headline}{fg=navy}
-\setbeamercolor{headline author}{fg=skyblue}
+\setbeamercolor{headline author}{fg=kthblue}
 \setbeamercolor{headline institute}{fg=skyblue}
+
+% Footer
+\setbeamercolor{footer}{fg=kthblue}
 
 % Block
 \setbeamercolor{block title}{fg=navy}
